--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -21,6 +21,7 @@ div .banner-img {
 
 .pop-prod {
 	text-align: center;
+	margin-top: 20px;
 }
 
 .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
@@ -28,7 +29,68 @@ div .banner-img {
 	padding-right: 0px;
 }
 
-footer {
-	background-color: #e7e7e7;
+.loginpage {
+	text-align: center;
+	margin-top: 100px;
+	margin-bottom: 100px;
+}
+
+.form1 {
+	margin-bottom: 10px;
+}
+
+.form2 {
+	margin-bottom: 20px;
+}
+
+.users {
+	margin-top: 40px;
+}
+
+div.overview-item {
+    display: inline-block;
+    position: relative;
+    width: 170px;
+    height: 200px;
+    margin: 15px;
+    background-color: #f8f8f8;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-size: cover;
+    background-position: center;
+}
+
+div.overview-item a.btn {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-bottom: none;
+    border-right: none;
+    border-radius: 0px;
+    border-top-left-radius: 4px;
+    border-bottom-right-radius: 5px;
+}
+
+div.overview-item span {
+    text-shadow: 0px 0px 3px rgba(150, 150, 150, 1);
+    position: absolute;
+    top: 28px;
+    left: 0;
+    padding: 5px 15px;
+    max-width: 100%;
+}
+
+div.overview-item span:first-child {
+    top: 0;
+}
+
+div.overview-item a.del {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-weight: 900;
+    color: red;
+    text-decoration: none;
+    padding: 0px 4px;
 }
 
