--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -53,6 +53,11 @@ div .banner-img {
 	margin-top: 40px;
 }
 
+.disabled {
+    color: grey;
+    cursor: not-allowed;
+}
+
 div.overview-item {
     display: inline-block;
     position: relative;
@@ -105,9 +110,8 @@ div.overview-item a.del {
 	margin-bottom: 20px !important;
 }
 
-div.user-list-item {
-    /*margin-right: 20px;*/
-    
+hr.hr-mar {
+    margin-top: 0px;
 }
 
 div.user-list-item a.view {
@@ -116,10 +120,12 @@ div.user-list-item a.view {
     width: calc(100% - 40px);
 }
 
-div.user-list-item a.view img {
+div.user-list-item a.view div.img {
     height: 100px;
     width: 100px;
     display: inline-block;
+    background-size: cover;
+    background-position: center;
 }
 
 div.user-list-item a.view span.name {
@@ -137,7 +143,7 @@ div.user-list-item a.view span.role {
 div.user-list-item a.del {
     position: absolute;
     right: 10px;
-    top: -15px;
+    top: -10px;
     font-weight: 900;
     color: red;
     text-decoration: none;
