--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -107,7 +107,7 @@ div.overview-item a.del {
 }
 
 .search {
-	margin-left: 15px !important;
+	/*margin-left: 15px !important;*/
 	margin-bottom: 20px !important;
 }
 
