--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -10,7 +10,7 @@ img.header-img {
 	margin-top: -10px;
 }
 
-div .banner-img {
+div.banner-img {
 	width: 100%;
 	height: 200px;
 }
@@ -57,6 +57,97 @@ div .banner-img {
     color: grey;
     cursor: not-allowed;
     display: none;
+}
+
+div.user-profile {
+    /*background-color: beige;*/
+}
+
+div.user-profile div.profile-picture {
+    height: 200px;
+    width: 100%;
+    border-radius: 5px;
+    background-size: cover;
+    background-position: center;
+    margin-top: 30px;
+}
+
+div.user-profile label {
+    width: 150px;
+}
+
+div.order-list {
+    padding: 30px 10px 0 10px;
+    height: calc(100vh - 53px);
+}
+
+div.order-list div {
+    background-color: #f1f1f1;
+    height: 100%;
+    width: 100%;
+    border-top-left-radius: 5px;
+    overflow-y: scroll;
+}
+
+div.order-list div div {
+    width: calc(100% - 30px);
+    max-width: 500px;
+    border-radius: 5px;
+    margin: 15px auto;
+    height: 100px;
+    overflow: hidden;
+    background-color: #a0a8b0;
+}
+
+div.order-list div div a {
+    height: 100%;
+    width: 50%;
+    display: block;
+    float: left;
+}
+
+div.order-list div div a span {
+    display: inline-block;
+    color: white;
+    height: 30px;
+    font-size: 15px;
+    padding: 5px;
+    margin: 9px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+div.order-list div div a.left:hover {
+    background: #858c93;
+    background: -webkit-linear-gradient(left, #858c93, #a0a8b0);
+    background: -moz-linear-gradient(left, #858c93, #a0a8b0);
+    background: -o-linear-gradient(left, #858c93, #a0a8b0);
+    background: linear-gradient(to right, #858c93, #a0a8b0);
+}
+
+div.order-list div div a.right:hover {
+    background: #858c93;
+    background: -webkit-linear-gradient(left, #a0a8b0, #858c93);
+    background: -moz-linear-gradient(left, #a0a8b0, #858c93);
+    background: -o-linear-gradient(left, #a0a8b0, #858c93);
+    background: linear-gradient(to right, #a0a8b0, #858c93);
+}
+
+div.order-list div div a span.full-w {
+    width: 100%;
+    text-align: right;
+}
+
+div.order-list div div a span.full-w-left {
+    width: 100%;
+}
+
+div.order-list div div a span.paid {
+    padding: 5px 10px;
+    color: #4F8A10;
+    background-color: #DFF2BF;
+    border-radius: 5px;
 }
 
 div.overview-item {
