--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -131,10 +131,7 @@ div.order-list div span.no-p {
     width: 100%;
     text-align: center;
     font-size: 4vw;
-    margin-top: 50%;
-    -webkit-transform: translateY(-70%);
-    -moz-transform: translateY(-70%);
-    transform: translateY(-70%);
+    margin-top: 200px;
 }
 
 div.order-list div div {
