--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -19,6 +19,26 @@ div.banner-img {
 	margin-bottom: 0px;
 }
 
+.stars {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+}
+
+.stars i.fa-star {
+    color: lightgray;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.stars i.fa-star:hover {
+    color: gray;
+}
+
+.stars i.active {
+    color: gold;
+}
+
 .pop-prod {
 	text-align: center;
 	margin-top: 20px;
