--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -19,6 +19,14 @@ div.banner-img {
 	margin-bottom: 0px;
 }
 
+.chart {
+    background: white;
+    width: 100%;
+    height: 100px;
+    border: 1px dotted #555;
+    padding: 20px 20px 20px 0;
+}
+
 .stars {
     position: absolute;
     right: 10px;
