--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -15,17 +15,76 @@ div.banner-img {
 	height: 200px;
 }
 
+.debug {
+    color: black !important;
+    font-weight: 600;
+}
+
 .navbar {
 	margin-bottom: 0px;
 }
 
-.chart {
-    background: white;
-    width: 100%;
-    height: 100px;
-    border: 1px dotted #555;
-    padding: 20px 20px 20px 0;
+.graf {
+    background-color: white;
+    border-radius: 5px;
+    margin-top: 20px;
 }
+
+.graf span {
+    display: block;
+    width: 600px;
+    text-align: center;
+    float: right;
+    margin-right: 60px;
+}
+
+.graf span h1, .graf span h4 {
+    margin: 0px;
+    display: inline;
+}
+
+svg.graph {
+  height: 410px;
+  width: 700px;
+  float: right;
+}
+
+svg.graph .grid {
+  stroke: black;
+  stroke-dasharray: 1 2;
+  stroke-width: 1;
+}
+
+svg.graph .points {
+  stroke: lightgray;
+  stroke-width: 3;
+}
+svg.graph .first_set {
+  fill: gray;
+}
+
+svg.graph .surfaces {
+  fill-opacity: 0.5;
+}
+
+svg.graph .grid.double {
+  stroke-opacity: 0.4;
+}
+
+svg.graph .labels {
+  font-family: Arial;
+  font-size: 14px;
+  kerning: 1;
+}
+
+svg.graph .labels.x-labels {
+  text-anchor: middle;
+}
+
+svg.graph .labels.y-labels {
+  text-anchor: end;
+}
+
 
 .stars {
     position: absolute;
